--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <figure class="app__logo-figure">
                     <img
                         class="app__logo-image"
-                        src="/imagens/logo.png"
+                        src="/Fokus/imagens/logo.png"
                         alt=""
                     />
                 </figure>
@@ -45,7 +45,11 @@
                     >
                 </h1>
                 <figure class="app__image-figure">
-                    <img class="app__image" src="/imagens/foco.png" alt="" />
+                    <img
+                        class="app__image"
+                        src="/Fokus/imagens/foco.png"
+                        alt=""
+                    />
                 </figure>
             </section>
             <section class="app__section-card-container">
@@ -104,7 +108,7 @@
                         >
                             <img
                                 class="app__card-primary-butto-icon"
-                                src="/imagens/play_arrow.png"
+                                src="/Fokus/imagens/play_arrow.png"
                                 alt=""
                             />
                             <span>Começar</span>
@@ -116,7 +120,7 @@
             <footer class="app__footer">
                 <p class="app__footer-text">
                     Projeto fictício e sem fins comerciais. Imagens geradas por
-                    IA no Adobe Firefly.Desenvolvido por Alura.
+                    IA no Adobe Firefly.
                 </p>
             </footer>
         </main>
