--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <figure class="app__logo-figure">
                     <img
                         class="app__logo-image"
-                        src="/Fokus/imagens/logo.png"
+                        src="/imagens/logo.png"
                         alt=""
                     />
                 </figure>
@@ -45,11 +45,7 @@
                     >
                 </h1>
                 <figure class="app__image-figure">
-                    <img
-                        class="app__image"
-                        src="/Fokus/imagens/foco.png"
-                        alt=""
-                    />
+                    <img class="app__image" src="/imagens/foco.png" alt="" />
                 </figure>
             </section>
             <section class="app__section-card-container">
@@ -108,7 +104,7 @@
                         >
                             <img
                                 class="app__card-primary-butto-icon"
-                                src="/Fokus/imagens/play_arrow.png"
+                                src="/imagens/play_arrow.png"
                                 alt=""
                             />
                             <span>Começar</span>
